syntax = "proto3";
import "Geometry.proto";
import "LapCoordinate.proto";
import "TrackLayoutMetadata.proto";

package IRacingTools.Models;

message TrackMap {

  TrackLayoutMetadata track_layout_metadata = 1;

  float total_distance = 2;
  repeated LapCoordinate path = 10;

  SizeF size = 20;
  SizeF scaled_size = 21;
  float scaled_ratio = 22;

}

