syntax = "proto3";

package IRacingTools.Models;

import "FileInfo.proto";
import "TrackLayoutMetadata.proto";

message TrackMapFile {

  /**
   * Track Layout ID
   */
  TrackLayoutMetadata track_layout_metadata = 1;
  FileInfo file_info = 2;



};


